src/test/compile-fail/extern-struct-destr-in-ident-position.rs
// Copyright 2012 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

// Concerning issue #10877

struct Foo { x: int }

extern {
    fn external_fn_three(Foo {x}: int); //~ ERROR expected `:` but found `{`
}

fn main() {}
